Fix forked mode wsgen and webservice annotation scanning, might need refract later
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@1074440 13f79535-47bb-0310-9956-ffa450edef68